--- a/client/package.json
+++ b/client/package.json
@@ -4,56 +4,53 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
-    "lint": "eslint . --fix --ignore-path .gitignore"
+    "build-only": "vite build",
+    "type-check": "vue-tsc --build --force",
+    "lint": "eslint . --fix"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^v5.15.4",
-    "core-js": "^3.29.0",
+    "@mdi/font": "7.4.47",
+    "core-js": "^3.37.1",
     "iframe-resizer": "^4.3.1",
-    "webfontloader": "^1.0.0"
+    "roboto-fontface": "*",
+    "vue": "^3.4.31",
+    "webfontloader": "^1.0.0",
+    "vuetify": "^3.6.14"
   },
   "devDependencies": {
     "@json-editor/json-editor": "^2.10.1",
-    "@vitejs/plugin-vue": "^4.6.2",
+    "@eslint/js": "^9.14.0",
+    "@tsconfig/node22": "^22.0.0",
+    "@types/node": "^22.9.0",
+    "@vitejs/plugin-vue": "^5.1.4",
+    "@vue/eslint-config-typescript": "^14.1.3",
+    "@vue/tsconfig": "^0.5.1",
     "bootstrap": "^4.6.0",
     "ejs": "^3.1.9",
-    "eslint": "^8.37.0",
-    "eslint-plugin-vue": "^9.3.0",
+    "eslint": "^9.14.0",
+    "eslint-plugin-vue": "^9.30.0",
     "fast-glob": "^3.3.0",
     "jodit": "^4.0.0-beta.61",
     "jquery": "^3.5.0",
     "jquery-ui-bundle": "^1.12.1",
     "less": "^4.1.1",
     "lodash": "^4.17.21",
+    "npm-run-all2": "^7.0.1",
     "oidc-client-ts": "^2.2.4",
     "pinia": "^2.1.4",
-    "vite": "^4.2.0",
+    "sass": "1.77.8",
+    "sass-embedded": "^1.77.8",
+    "typescript": "~5.6.3",
+    "unplugin-fonts": "^1.1.1",
+    "unplugin-vue-components": "^0.27.2",
+    "unplugin-vue-router": "^0.10.0",
+    "vite": "^5.4.10",
     "vite-multiple-assets": "^1.2.3",
-    "vite-plugin-vuetify": "^1.0.0",
-    "vue": "^3.2.0",
-    "vue-router": "^4.0.0",
-    "vuetify": "^3.0.0"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true,
-      "es2022": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "globals": {
-      "$": true
-    },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+    "vite-plugin-vuetify": "^2.0.3",
+    "vue-router": "^4.4.0",
+    "vue-tsc": "^2.1.10"
+  }
 }
