--- a/client/package.json
+++ b/client/package.json
@@ -17,12 +17,13 @@
     "iframe-resizer": "^4.3.1",
     "roboto-fontface": "*",
     "vue": "^3.4.31",
-    "webfontloader": "^1.0.0",
-    "vuetify": "^3.6.14"
+    "vuetify": "^3.6.14",
+    "webfontloader": "^1.0.0"
   },
   "devDependencies": {
-    "@json-editor/json-editor": "^2.10.1",
     "@eslint/js": "^9.14.0",
+    "@json-editor/json-editor": "^2.10.1",
+    "@rollup/plugin-inject": "^5.0.5",
     "@tsconfig/node22": "^22.0.0",
     "@types/node": "^22.9.0",
     "@vitejs/plugin-vue": "^5.1.4",
