--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,10 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^v5.15.4",
+    "@iframe-resizer/child": "^5.3.2",
+    "@iframe-resizer/parent": "^5.3.2",
     "@mdi/font": "7.4.47",
     "core-js": "^3.37.1",
-    "iframe-resizer": "^4.3.1",
     "roboto-fontface": "*",
     "vue": "^3.4.31",
     "vuetify": "^3.6.14",
