--- a/client/package.json
+++ b/client/package.json
@@ -30,11 +30,9 @@
     "@vitejs/plugin-vue": "^5.1.4",
     "@vue/eslint-config-typescript": "^14.1.3",
     "@vue/tsconfig": "^0.5.1",
-    "bootstrap": "^4.6.0",
     "ejs": "^3.1.9",
     "eslint": "^9.14.0",
     "eslint-plugin-vue": "^9.30.0",
-    "fast-glob": "^3.3.0",
     "jodit": "^4.0.0-beta.61",
     "jquery": "^3.5.0",
     "jquery-ui-bundle": "^1.12.1",
@@ -45,6 +43,7 @@
     "pinia": "^2.1.4",
     "sass": "1.77.8",
     "sass-embedded": "^1.77.8",
+    "spectre.css": "^0.5.9",
     "typescript": "~5.6.3",
     "unplugin-fonts": "^1.1.1",
     "unplugin-vue-components": "^0.27.2",
