use unplugin-fonts/vite to load font and icons

--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,7 @@
     "@iframe-resizer/child": "^5.3.2",
     "@iframe-resizer/parent": "^5.3.2",
     "vue": "^3.4.31",
-    "vuetify": "^3.6.14",
-    "webfontloader": "^1.0.0"
+    "vuetify": "^3.6.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
