--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@eslint/js": "^9.14.0",
     "@json-editor/json-editor": "^2.10.1",
+    "@mdi/font": "^7.4.47",
     "@rollup/plugin-inject": "^5.0.5",
     "@tsconfig/node22": "^22.0.0",
     "@types/node": "^22.9.0",
