--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "@typescript-eslint/eslint-plugin": "^8.18.0",
     "@typescript-eslint/parser": "^8.18.0",
     "commander": "^11.1.0",
+    "cross-env": "^7.0.3",
     "csvtojson": "^2.0.10",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
