--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^v5.15.4",
     "core-js": "^3.29.0",
+    "cross-spawn": "^7.0.6",
     "iframe-resizer": "^4.3.1",
+    "micromatch": "^4.0.8",
+    "nanoid": "^3.3.8",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
@@ -29,7 +32,7 @@
     "lodash": "^4.17.21",
     "oidc-client-ts": "^2.4.0",
     "pinia": "^2.1.4",
-    "vite": "^4.5.3",
+    "vite": "^4.5.9",
     "vite-multiple-assets": "^1.2.3",
     "vite-plugin-vuetify": "^1.0.0",
     "vue": "^3.2.0",
