--- a/helm/templates/log-cleanup-cronjob.yaml
+++ b/helm/templates/log-cleanup-cronjob.yaml
@@ -8,7 +8,7 @@ metadata:
   labels:
     {{- include "NotifyBC.labels" . | nindent 4 }}
 spec:
-  schedule: "0 3 * * *"
+  schedule: "0 3 1 * *"
   successfulJobsHistoryLimit: 1
   failedJobsHistoryLimit: 1
   concurrencyPolicy: Forbid
