--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mailparser": "^3.6.5",
-    "mongodb-memory-server": "^10.1.2",
+    "mongodb-memory-server": "^9.5.0",
     "mongoose": "^8.8.4",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.5",
@@ -79,6 +79,7 @@
     "@nestjs/cli": "^10.4.5",
     "@nestjs/schematics": "^10.2.2",
     "@nestjs/testing": "^10.4.5",
+    "@testcontainers/redis": "^11.5.1",
     "@types/bcryptjs": "^2.4.3",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
@@ -97,7 +98,6 @@
     "prettier": "^2.8.8",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
-    "testcontainers": "^10.16.0",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
