--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,6 +57,7 @@
     "mongorestore",
     "mymaster",
     "NDRs",
+    "Nexmo",
     "nindent",
     "nlike",
     "nonexpired",
@@ -82,6 +83,7 @@
     "usercredential",
     "userdisplayname",
     "virtuals",
+    "vonage",
     "Vuex",
     "yourprojectname"
   ]
