created helm repo under gh-pages helm folder

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,7 @@
     "apitoken",
     "automigrate",
     "autorun",
+    "bitnamilegacy",
     "Booter",
     "bullmq",
     "codecopy",
@@ -72,6 +73,7 @@
     "serviceaccount",
     "signup",
     "smgov",
+    "stefanprodan",
     "summernote",
     "testlab",
     "tolerations",
