--- a/.github/workflows/ghPages.yml
+++ b/.github/workflows/ghPages.yml
@@ -12,30 +12,33 @@ env:
   ALGOLIA_APP_ID: ${{ secrets.ALGOLIA_APP_ID }}
 jobs:
   build-and-deploy:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     steps:
-      - name: Update notifyBCDocVersion_PATH for releases
-        if: ${{ startsWith(github.ref, 'refs/tags/') }}
-        run: echo notifyBCDocVersion_PATH=/version/$(echo $GITHUB_REF | cut -d / -f 3 | cut -d v -f 2- | cut -d . -f 1,2)/ >> $GITHUB_ENV
-
-      - name: Update notifyBCDocVersion_PATH for non-main branches
-        if: ${{ github.ref_type == 'branch' && github.ref_name != 'main'}}
-        run: echo notifyBCDocVersion_PATH=/preview/ >> $GITHUB_ENV
-
       - name: Checkout 🛎️
-        uses: actions/checkout@v3
-
+        uses: actions/checkout@v4
+      - name: Publish Helm charts
+        uses: stefanprodan/helm-gh-pages@master
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          charts_dir: .
+          target_dir: helm
       - uses: actions/setup-node@v3
         with:
           node-version: ${{ vars.NODE_VERSION }}
-
+      - name: Update notifyBCDocVersion_PATH for releases
+        if: ${{ startsWith(github.ref, 'refs/tags/') }}
+        run: echo notifyBCDocVersion_PATH=/version/$(echo $GITHUB_REF | cut -d / -f 3 | cut -d v -f 2- | cut -d . -f 1,2)/ >> $GITHUB_ENV
+      - name: Update notifyBCDocVersion_PATH for non-main branches
+        if: ${{ github.ref_type == 'branch' && github.ref_name != 'main'}}
+        run: echo notifyBCDocVersion_PATH=/preview/ >> $GITHUB_ENV
       - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
         run: |
           cd docs
           npm install
           npm run build
-
-      - name: Deploy 🚀
+      - name: Deploy docs 🚀
         uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -43,4 +46,4 @@ jobs:
           FOLDER: docs/.vuepress/dist # The folder the action should deploy.
           TARGET_FOLDER: ${{ env.notifyBCDocVersion_PATH }}
           CLEAN: true # Automatically remove deleted files from the deploy branch
-          CLEAN_EXCLUDE: '["version"]'
+          CLEAN_EXCLUDE: '["version","helm"]'
