--- a/helm/index.yaml
+++ b/helm/index.yaml
@@ -3,6 +3,24 @@ entries:
   notify-bc:
   - apiVersion: v2
     appVersion: "6.3"
+    created: "2025-10-31T21:54:42.243709226Z"
+    dependencies:
+    - name: mongodb
+      repository: https://charts.bitnami.com/bitnami
+      version: 16.3.3
+    - name: redis
+      repository: https://charts.bitnami.com/bitnami
+      version: 20.4.1
+    description: NotifyBC Helm chart for Kubernetes
+    digest: 9b7a55f49210ef43b6265299754c5ab2a5cd6b40b60bd2eba68a4359b65c2aba
+    icon: https://raw.githubusercontent.com/bcgov/NotifyBC/main/favicon.ico
+    name: notify-bc
+    type: application
+    urls:
+    - https://bcgov.github.io/NotifyBC/helm/notify-bc-6.3.1.tgz
+    version: 6.3.1
+  - apiVersion: v2
+    appVersion: "6.3"
     created: "2025-10-03T20:27:39.509399913Z"
     dependencies:
     - name: mongodb
@@ -19,4 +37,4 @@ entries:
     urls:
     - https://bcgov.github.io/NotifyBC/helm/notify-bc-6.3.0.tgz
     version: 6.3.0
-generated: "2025-10-03T20:27:39.496092337Z"
+generated: "2025-10-31T21:54:42.228906525Z"
